--- a/index.html
+++ b/index.html
@@ -5,49 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welkom</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Dit is een grote titel</h1>
-    <p>Hier wat tekst. Gewoon een saaie paragraaf.</p>
-    <p>Hier de tooling die we gedaan hebben:</p>
-    <ol>
-      <li>Git</li>
-      <li>Python advanced stuff</li>
-      <li>Django</li>
-      <li>HTML</li>
-      <li>CSS</li>
-    </ol>
-    <a href="https://www.google.com">Stel hier al je vragen</a>
-    <form>
-      <input type="text" />
-      <input type="number" />
-      <select>
-        <option value="html">HTML</option>
-        <option value="css">CSS</option>
-      </select>
-    </form>
-    <table>
-      <tr>
-        <th>Naam</th>
-        <th>Lievelingstool</th>
-      </tr>
-      <tr>
-        <td>Wiljan</td>
-        <td>Python</td>
-      </tr>
-      <tr>
-        <td>Raoul</td>
-        <td>Python</td>
-      </tr>
-      <tr>
-        <td>Maaike</td>
-        <td>Java</td>
-      </tr>
-    </table>
-    <img
-      src="https://i.etsystatic.com/35728698/r/il/59d0db/3946172775/il_794xN.3946172775_qwd1.jpg"
-      width="300"
-      alt="Koffie"
-    />
+    <div class="container-fluid">
+      <div class="row">
+        <h1>Dit is een grote titel</h1>
+
+        <p class="geel">Hier wat tekst. Gewoon een saaie paragraaf.</p>
+        <p>Hier de tooling die we gedaan hebben:</p>
+      </div>
+      <div class="row">
+        <ol>
+          <li>Git</li>
+          <li>Python advanced stuff</li>
+          <li>Django</li>
+          <li>HTML</li>
+          <li>CSS</li>
+        </ol>
+        <a href="https://www.google.com">Stel hier al je vragen</a>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <form class="form">
+            <input type="text" />
+            <input type="number" />
+            <select>
+              <option value="html">HTML</option>
+              <option value="css">CSS</option>
+            </select>
+            <input class="btn btn-primary" type="submit" value="Let's go" />
+          </form>
+        </div>
+        <div class="col-3">
+          <table>
+            <tr>
+              <th>Naam</th>
+              <th>Lievelingstool</th>
+            </tr>
+            <tr>
+              <td>Wiljan</td>
+              <td>Python</td>
+            </tr>
+            <tr>
+              <td>Raoul</td>
+              <td>Python</td>
+            </tr>
+            <tr>
+              <td>Maaike</td>
+              <td>Java</td>
+            </tr>
+          </table>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <img
+            src="https://i.etsystatic.com/35728698/r/il/59d0db/3946172775/il_794xN.3946172775_qwd1.jpg"
+            alt="Koffie"
+          />
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
